# CommitGPT

./: Cargo.toml  README.md
src/: args.rs  config.rs  error.rs  main.rs
